# cpp-os-labs

./: .gitignore  README.md
Lab1/: CMakeLists.txt  input.txt  main.cpp
coursework/: CMakeLists.txt
coursework/app/: client_main.cpp  server_main.cpp
coursework/include/: chat_client.hpp  chat_server.hpp  message_dispatcher.hpp  message_logger.hpp  shared_memory.hpp  shared_memory_manager.hpp  user_manager.hpp
coursework/src/: chat_client.cpp  chat_server.cpp  message_dispatcher.cpp  message_logger.cpp  shared_memory_manager.cpp  user_manager.cpp
lab1/: CMakeLists.txt  child.cpp  input.txt
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  child.cpp  main.cpp
lab4/: CMakeLists.txt  dynamic_log.txt  static_log.txt
lab4/app/: dynamic.cpp  static.cpp
lab4/include/: contract.h
lab4/lib/: advanced.cpp  basic.cpp
